<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/hola_todos"
        />
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/este_es_correo"
        android:inputType="textEmailSubject"
        />
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_numero"
        android:inputType="number"
        />
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_telefono"
        android:inputType="phone"
        />
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_pass"
        android:inputType="textPassword"
        />
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_multilinea"
        android:inputType="textMultiLine"
        />
    
    <!-- android:completionThreshold: Carácter a partir del que entra el autocomplete -->
    <AutoCompleteTextView 
        android:id="@+id/AutoCompleteTV01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_mes"
        android:completionHint="@string/introduce_mes"
        android:completionThreshold="3" 
        />
    
    <AutoCompleteTextView 
        android:id="@+id/AutoCompleteTV02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_nombre"
        android:completionHint="@string/introduce_nombre"
        android:completionThreshold="2"
        
        />
    
</LinearLayout>
